--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-main.bin
-main.hex
-main.o
-1x7display
-4x7display
+programs/main.bin
+programs/main.hex
+programs/main.o
+programs/1x7display
+programs/4x7display
